[package]
name = "quantis_appliance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8"
rand_hc="0.3"
tokio={version="1.23", features=["full"]}
serde="1.0"
serde_json="1.0"
warp={version="0.3", features=["tls"]}
rustls="0.20"
